--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -6,4 +6,6 @@ chapters:
       - file: lecture-1/exercise-1.1.ipynb
       - file: lecture-1/exercise-1.2.ipynb
       - file: lecture-1/exercise-1.3.ipynb
+      - file: lecture-1/exercise-1.4.ipynb
+      - file: lecture-1/exercise-1.5.ipynb
 
