--- a/environment.yml
+++ b/environment.yml
@@ -14,3 +14,4 @@ dependencies:
       - ghp-import
       - jupyter-matlab-proxy
       - sphinxemoji
+      - git+https://github.com/michakraus/ipython-tikzmagic.git
