--- a/book/_config.yml
+++ b/book/_config.yml
@@ -71,6 +71,7 @@ sphinx:
   html_context:
     default_mode: light
   config:
+    mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
     html_js_files:
       - "https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"
     myst_footnote_transition: false
