--- a/book/_config.yml
+++ b/book/_config.yml
@@ -41,8 +41,12 @@ parse:
 # Information about where the book exists on the web
 repository:
   url: https://github.com/bonassifabio/1RT485  # Online location of your book
-  # path_to_book: docs  # Optional path to your book, relative to the repository root
-  branch: gh-pages  # Which branch of the repository should be used when creating links (optional)
+  path_to_book: book  # Optional path to your book, relative to the repository root
+  branch: main  # Which branch of the repository should be used when creating links (optional)
+
+launch_buttons:
+  notebook_interface: "jupyterlab" 
+  binderhub_url: "https://mybinder.org"
 
 # Add GitHub buttons to your book
 # See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
