--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -14,5 +14,11 @@ chapters:
       - file: lecture-2/exercise-2.2.ipynb
       - file: lecture-2/exercise-2.3.ipynb
       - file: lecture-2/exercise-2.4.ipynb
+  - file: lecture-3/index
+    sections: 
+      - file: lecture-3/exercise-3.1.ipynb
+      - file: lecture-3/exercise-3.2.ipynb
+      - file: lecture-3/exercise-3.3.ipynb
+      - file: lecture-3/exercise-3.4.ipynb
 
 
