--- a/environment.yml
+++ b/environment.yml
@@ -11,6 +11,7 @@ dependencies:
   - fortran-compiler
   - cxx-compiler
   - poppler
+  - control
   - pip:
       - ghp-import
       - jupyter-matlab-proxy
