--- a/.binder/environment.yml
+++ b/.binder/environment.yml
@@ -2,7 +2,7 @@ name: xeus-octave
 channels:
   - conda-forge
 dependencies:
-  - xeus-octave ==0.2.0
+  - xeus-octave
   # For Plotly graphical toolkit
   - plotly
   # Runtime dependency for Octave ``symbolic`` package.
