--- a/book/_config.yml
+++ b/book/_config.yml
@@ -73,6 +73,8 @@ html:
 sphinx:
   recursive_update: true
   config:
+    html_static_path: ["_static"]
+    html_css_files: ["custom.css"]
     html_context:
       default_mode: light
     mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
