--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -2,12 +2,13 @@ format: jb-book
 root: intro
 chapters:
   - file: lecture-1/index
-    # sections: 
-    #   - file: lecture-1/exercise-1.1.ipynb
-    #   - file: lecture-1/exercise-1.2.ipynb
-    #   - file: lecture-1/exercise-1.3.ipynb
-    #   - file: lecture-1/exercise-1.4.ipynb
-    #   - file: lecture-1/exercise-1.5.ipynb
+    sections: 
+      - file: lecture-1/exercise-1.0.ipynb
+      - file: lecture-1/exercise-1.1.ipynb
+      - file: lecture-1/exercise-1.2.ipynb
+      - file: lecture-1/exercise-1.3.ipynb
+      - file: lecture-1/exercise-1.4.ipynb
+      - file: lecture-1/exercise-1.5.ipynb
   - file: lecture-2/index
     # sections: 
     #   - file: lecture-2/exercise-2.1.ipynb
