--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -2,31 +2,44 @@ format: jb-book
 root: intro
 chapters:
   - file: lecture-1/index
-    sections: 
-      - file: lecture-1/exercise-1.0.ipynb
+    sections:
+      - file: lecture-1/exercise-1.0.ipynb  
+        sections: 
+          - file: lecture-1/exercise-1.0-solutions.ipynb
       - file: lecture-1/exercise-1.1.ipynb
+        sections: 
+          - file: lecture-1/exercise-1.1-solutions.ipynb
       - file: lecture-1/exercise-1.2.ipynb
+        sections: 
+          - file: lecture-1/exercise-1.2-solutions.ipynb
+      - file: lecture-1/useful-formulas.ipynb
       - file: lecture-1/exercise-1.3.ipynb
+        sections: 
+          - file: lecture-1/exercise-1.3-solutions.ipynb
       - file: lecture-1/exercise-1.4.ipynb
+        sections: 
+          - file: lecture-1/exercise-1.4-solutions.ipynb
       - file: lecture-1/exercise-1.5.ipynb
-  - file: lecture-2/index
+        sections: 
+          - file: lecture-1/exercise-1.5-solutions.ipynb
+  # - file: lecture-2/index
     # sections: 
     #   - file: lecture-2/exercise-2.1.ipynb
     #   - file: lecture-2/exercise-2.2.ipynb
     #   - file: lecture-2/exercise-2.3.ipynb
     #   - file: lecture-2/exercise-2.4.ipynb
-  - file: lecture-3/index
+  # - file: lecture-3/index
     # sections: 
     #   - file: lecture-3/exercise-3.1.ipynb
     #   - file: lecture-3/exercise-3.2.ipynb
     #   - file: lecture-3/exercise-3.3.ipynb
     #   - file: lecture-3/exercise-3.4.ipynb
-  - file: lecture-4/index
+  # - file: lecture-4/index
     # sections:
     #   - file: lecture-4/exercise-4.1.ipynb
     #   - file: lecture-4/exercise-4.2.ipynb
     #   - file: lecture-4/exercise-4.3.ipynb
-  - file: lecture-5/index
-  - file: lecture-6/index
-  - file: lecture-7/index
+  # - file: lecture-5/index
+  # - file: lecture-6/index
+  # - file: lecture-7/index
 
