--- a/book/_config.yml
+++ b/book/_config.yml
@@ -57,7 +57,9 @@ html:
   use_repository_button     : true  # Whether to add a link to your repository button
   use_issues_button         : true  # Whether to add an "open an issue" button
   use_multitoc_numbering    : true   # Continuous numbering across parts/chapters
-  extra_footer              : ""  # Will be displayed underneath the footer.
+  extra_footer              : |
+    <script data-goatcounter="https://bonassifabio.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
   home_page_in_navbar       : true  # Whether to include your home page in the left Navigation Bar
   baseurl                   : ""  # The base URL where your book will be hosted. Used for creating image previews and social links. e.g.: https://mypage.com/mybook/
   # analytics:
