--- a/book/_config.yml
+++ b/book/_config.yml
@@ -42,7 +42,7 @@ parse:
 repository:
   url: https://github.com/bonassifabio/1RT485  # Online location of your book
   path_to_book: book  # Optional path to your book, relative to the repository root
-  branch: main  # Which branch of the repository should be used when creating links (optional)
+  branch: binder-env  # Which branch of the repository should be used when creating links (optional)
 
 launch_buttons:
   notebook_interface: "jupyterlab" 
