--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ octave-workspace
 bin/
 .DS_Store
 book/lecture-*/asymptotic_bode.m
+book/lecture-*/asymptotic_bodemag.m
 book/lecture-*/bodeplot_universal.m
 .ipynb_checkpoints
 .pyc
