--- a/.dev/environment.yml
+++ b/.dev/environment.yml
@@ -5,6 +5,8 @@ dependencies:
   - jupyter-book=1
   - xeus-octave
   - octave
+  - octave-control
+  - octave-signal
   - python=3.12
   - jupyterlab
   - ipywidgets
@@ -12,9 +14,9 @@ dependencies:
   - cxx-compiler
   - poppler
   - control
+  - jupyterlab-myst
   - pip:
       - ghp-import
       - jupyter-matlab-proxy
       - sphinxemoji
       - jupyter-tikz
-      - jupyterlab_myst
