- Fixed bugs in `asymptotic_bodemag` - Added exercise 5.2

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -82,6 +82,9 @@ chapters:
       - file: lecture-5/exercise-5.1.ipynb
         sections:
           - file: lecture-5/exercise-5.1-solutions.ipynb
+      - file: lecture-5/exercise-5.2.ipynb
+        sections:
+          - file: lecture-5/exercise-5.2-solutions.ipynb
 
   # - file: lecture-6/index
   # - file: lecture-7/index
