- Added Exercise 6.1 - Fixed typos - Added separator before footnotes

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -94,6 +94,9 @@ chapters:
       - file: lecture-6/exercise-6.0.ipynb
         sections:
           - file: lecture-6/exercise-6.0-solutions.ipynb
+      - file: lecture-6/exercise-6.1.ipynb
+        sections:
+          - file: lecture-6/exercise-6.1-solutions.ipynb
 
   # - file: lecture-7/index
 
