--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -100,5 +100,10 @@ chapters:
       - file: lecture-6/exercise-6.2.ipynb
         sections:
           - file: lecture-6/exercise-6.2-solutions.ipynb
+      - file: lecture-6/exercise-6.3.ipynb
+        sections:
+          - file: lecture-6/exercise-6.3-solutions.ipynb
+
+
   # - file: lecture-7/index
 
