--- a/book/_config.yml
+++ b/book/_config.yml
@@ -77,12 +77,12 @@ sphinx:
   recursive_update: true
   extra_extensions:
     - sphinx_tags
-    - jb1_zoomies
+    - teachbooks_zoomies
   local_extensions:
     tag_logic: _extensions
   config:
     zoomies_bg_apply_to_img: true
-    zoomies_invert_colors: true
+    # zoomies_invert_colors: true
     html_context:
       default_mode: light
     mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
