--- a/book/_config.yml
+++ b/book/_config.yml
@@ -5,7 +5,7 @@ title: 1RT485 Exercise Book 2.0
 author: Fabio Bonassi
 copyright: "2025"
 exclude_patterns: [_build, Thumbs.db, .DS_Store, "**.ipynb_checkpoints"]
-logo: res/logo.svg
+# logo: res/logo.svg
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
@@ -77,6 +77,7 @@ sphinx:
   recursive_update: true
   extra_extensions:
     - sphinx_tags
+    - sphinx_image_inverter
     - teachbooks_zoomies
   local_extensions:
     tag_logic: _extensions
@@ -85,6 +86,11 @@ sphinx:
     # zoomies_invert_colors: true
     html_context:
       default_mode: light
+    html_theme_options: 
+      logo:
+        alt_text: 1RT485
+        image_light: res/logo.svg
+        image_dark:  res/logo-dark.svg 
     mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
     mathjax3_config: 
       loader:
