--- a/.dev/environment.yml
+++ b/.dev/environment.yml
@@ -1,4 +1,4 @@
-name: book
+§name: book
 channels:
   - conda-forge
 dependencies:
@@ -21,3 +21,4 @@ dependencies:
       - sphinxemoji
       - jupyter-tikz
       - teachbooks-zoomies
+      - jupyterbook_patches
