Added tippy extension to show image and equation previews

--- a/.dev/environment.yml
+++ b/.dev/environment.yml
@@ -23,3 +23,5 @@ dependencies:
       - teachbooks-zoomies
       - jupyterbook_patches
       - sphinx-accessibility
+      - teachbooks-sphinx-tippy
+
