Added control toolbox

--- a/.dev/environment.yml
+++ b/.dev/environment.yml
@@ -16,6 +16,7 @@ dependencies:
   - control
   - jupyterlab-myst
   - pip:
+      - control
       - ghp-import
       - jupyter-matlab-proxy
       - sphinxemoji
