--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -115,4 +115,7 @@ chapters:
       - file: lecture-7/exercise-7.1.ipynb
         sections:
           - file: lecture-7/exercise-7.1-solutions.ipynb
+      - file: lecture-7/exercise-7.2.ipynb
+        sections:
+          - file: lecture-7/exercise-7.2-solutions.ipynb
 
