--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -121,3 +121,6 @@ chapters:
       - file: lecture-7/exercise-7.3.ipynb
         sections:
           - file: lecture-7/exercise-7.3-solutions.ipynb
+      - file: lecture-7/exercise-7.4.ipynb
+        sections:
+          - file: lecture-7/exercise-7.4-solutions.ipynb
